refactored user auth, added client side components

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "concurrently \"npm run start\" \"cd ../client && npm start\""
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "nodemon": "^2.0.15"
   }
 }
