--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "nodemon app.js --ignore client",
     "dev": "concurrently \"npm run start\" \"cd ../client && npm start\""
   },
   "keywords": [],
